--- a/deck.mdx
+++ b/deck.mdx
@@ -1,4 +1,5 @@
-import { Head } from 'mdx-deck'
+import { Head, Notes} from 'mdx-deck'
+import { FullScreenCode, Split } from 'mdx-deck/layouts'
 export { hack as theme } from 'mdx-deck/themes'
 
 <Head>
@@ -7,7 +8,7 @@ export { hack as theme } from 'mdx-deck/themes'
 
 # React
 
-## A JavaScript Library
+![reactjs](https://media.giphy.com/media/iqz4atBej74cg/giphy.gif)
 
 Paul Castillo
 
@@ -19,6 +20,7 @@ Paul Castillo
 - JavaScript ES Version
 - Terms to Learn
 - Syntax Differences
+- Thinking in React
 
 ---
 
@@ -26,15 +28,96 @@ Paul Castillo
 
 ---
 
-## JavaScript Es Versions
+## JavaScript ES Versions
+
+![js](https://cdn-images-1.medium.com/max/1600/1*Zmm4_vfUPNc_eyzUIZzN6Q.png)
 
 ---
 
 ## Terms to Learn
 
+JSX — Allows us to write HTML like syntax which gets
+transformed to lightweightJavaScript objects.
+
+Virtual DOM — A JavaScript representation of the actual
+DOM.
+
+React.Component — The way in which you create a new component.
+
+---
+
+## Terms to Learn (cont)
+
+render (method) — Describes what the UI will look like for
+the particular component.
+
+ReactDOM.render — Renders a React component to a DOM node.
+
+state — The internal data store (object) of a component.
+
+constructor (this.state) - The way in which you establish
+the initial state of a component.
+
+---
+
+## Terms to Learn(cont)
+
+setState — A helper method used for updating the state of a
+component and re-rendering the UI
+
+props — The data which is passed to the child component
+from the parent component.
+
+propTypes — Allows you to control the presence, or types of
+certain props passed to the child component.
+
+defaultProps — Allows you to set default props for your component.
+
+---
+
+export default FullScreenCode
+
+```jsx
+// Code Example
+
+import React from 'react'
+import ReactDOM from 'react-dom'
+
+class HelloWorld extends React.Component {
+  render() {
+    return <div>Hello World!</div>
+  }
+}
+
+ReactDOM.render(<HelloWorld />, document.getElementById('root'))
+```
+
 ---
 
 ## Syntax Differences
+
+---
+
+## Thinking in React
+
+![comps](https://reactjs.org/static/thinking-in-react-components-eb8bda25806a89ebdc838813bdfa3601-82965.png)
+
+<Notes>
+  Only visible in presenter mode
+  `opt + o` for overview mode`
+  `opt + p` for preseter mode
+</Notes>
+
+---
+
+## Resources
+
+- [React Docs](https://reactjs.org/docs/getting-started.html)
+- [Tyler McGinnis: Guide to Learning React](https://tylermcginnis.com/reactjs-tutorial-a-comprehensive-guide-to-building-apps-with-react/)
+
+---
+
+## 🙋‍ Questions
 
 ---
 
