Added why and changed order.

--- a/deck.mdx
+++ b/deck.mdx
@@ -16,12 +16,17 @@ Paul Castillo
 
 ## Overview
 
+- Why? 
 - History
 - JavaScript ES Version
 - React fundamentals
-- Terms to Learn
 - Syntax Differences
+- Terms to Learn
 - Thinking in React
+
+---
+
+## Why? 
 
 ---
 
@@ -79,6 +84,22 @@ class ParentComponent extends React.Component {
       return <div>The message is passed</div>;
     }
 ```
+---
+## Syntax Differences
+| | JavaScript  | C# |
+|---|---|---|
+| Typing  | Weak/Dynamic | Static  |
+|  Compilation | Interpreted   | Compiled  |
+
+---
+### Pros
+|JavaScript  | C# |
+|---|---|
+| Dynamic | Cool Syntax  |
+| Lives in Browser   | Great Lambda support  |
+| Fast | Great Generics support |
+| Flexible | Extention Methods |
+| Non-blocking I/O | Automatic Garbage Collection |
 
 ---
 ## Terms to Learn
@@ -138,28 +159,6 @@ class HelloWorld extends React.Component {
 
 ReactDOM.render(<HelloWorld />, document.getElementById('root'))
 ```
-
----
-## Syntax Differences
-| | JavaScript  | C# |
-|---|---|---|
-| Typing  | Weak/Dynamic | Static  |
-|  Compilation | Interpreted   | Compiled  |
-
-
----
-### Pros
-|JavaScript  | C# |
-|---|---|
-| Dynamic | Cool Syntax  |
-| Lives in Browser   | Great Lambda support  |
-| Fast | Great Generics support |
-| Flexible | Extention Methods |
-| Non-blocking I/O | Automatic Garbage Collection |
-
----
-
-## Syntax Differences
 
 ---
 
