Fixed miss spelling.

--- a/deck.mdx
+++ b/deck.mdx
@@ -98,7 +98,7 @@ class ParentComponent extends React.Component {
 | Dynamic | Cool Syntax  |
 | Lives in Browser   | Great Lambda support  |
 | Fast | Great Generics support |
-| Flexible | Extention Methods |
+| Flexible | Extension Methods |
 | Non-blocking I/O | Automatic Garbage Collection |
 
 ---
