--- a/deck.mdx
+++ b/deck.mdx
@@ -20,9 +20,8 @@ Paul Castillo
 - History
 - JavaScript ES Version
 - React fundamentals
-- Syntax Differences
-- Terms to Learn
-- Thinking in React
+- Syntax DifferencesI Javascript vs. C#
+- Pros Javascript vs. C#
 
 ---
 
@@ -100,46 +99,6 @@ class ParentComponent extends React.Component {
 | Fast | Great Generics support |
 | Flexible | Extension Methods |
 | Non-blocking I/O | Automatic Garbage Collection |
-
----
-## Terms to Learn
-
-JSX — Allows us to write HTML like syntax which gets
-transformed to lightweightJavaScript objects.
-
-Virtual DOM — A JavaScript representation of the actual
-DOM.
-
-React.Component — The way in which you create a new component.
-
----
-
-## Terms to Learn (cont)
-
-render (method) — Describes what the UI will look like for
-the particular component.
-
-ReactDOM.render — Renders a React component to a DOM node.
-
-state — The internal data store (object) of a component.
-
-constructor (this.state) - The way in which you establish
-the initial state of a component.
-
----
-
-## Terms to Learn(cont)
-
-setState — A helper method used for updating the state of a
-component and re-rendering the UI
-
-props — The data which is passed to the child component
-from the parent component.
-
-propTypes — Allows you to control the presence, or types of
-certain props passed to the child component.
-
-defaultProps — Allows you to set default props for your component.
 
 ---
 
