--- a/deck.mdx
+++ b/deck.mdx
@@ -20,7 +20,7 @@ Paul Castillo
 - History
 - JavaScript ES Version
 - React fundamentals
-- Syntax DifferencesI Javascript vs. C#
+- Syntax Differences Javascript vs. C#
 - Pros Javascript vs. C#
 
 ---
