Added What to slides.

--- a/deck.mdx
+++ b/deck.mdx
@@ -16,7 +16,7 @@ Paul Castillo
 
 ## Overview
 
-- Why? 
+- What is React? Why use it? 
 - History
 - JavaScript ES Version
 - React fundamentals
@@ -25,7 +25,9 @@ Paul Castillo
 
 ---
 
-## Why? 
+## What is React?
+
+## Why use it?
 
 ---
 
