Added part deux.

--- a/deck.mdx
+++ b/deck.mdx
@@ -137,3 +137,24 @@ ReactDOM.render(<HelloWorld />, document.getElementById('root'))
 ## Created with ❤️ with mdx-deck
 
 <https://github.com/jxnblk/mdx-deck>
+
+---
+# React Part Deux
+
+![reactjs](https://media.giphy.com/media/iqz4atBej74cg/giphy.gif)
+
+Paul Castillo
+
+---
+## Overview
+
+- Development tooling
+- State of React/Component Ecosystem
+- Prop types
+- Lifecycle methods
+- State components
+- How to work with the BTS API
+
+---
+
+---
