--- a/deck.mdx
+++ b/deck.mdx
@@ -150,10 +150,27 @@ Paul Castillo
 
 - Development tooling
 - State of React/Component Ecosystem
-- Prop types
-- Lifecycle methods
-- State components
-- How to work with the BTS API
+
+---
+
+## Development tooling
+
+- VS Code
+- Babel – what is it?
+- EsLint - linting
+- Prettier – Code formatter
+- Cypress.io - testing
+## Extensions
+  - JS Refactor
+  - Brackets Colorizer
+
+---
+
+## React / Component Ecosystem
+
+- What is out there to work with?
+- NPM is your friend
+- Github.com
 
 ---
 
