--- a/deck.mdx
+++ b/deck.mdx
@@ -174,4 +174,18 @@ Paul Castillo
 
 ---
 
+## 🙋‍ Questions
+
+---
+
+Resources
+- Awesome React - https://github.com/enaqx/awesome-react
+- Scrimba tutorials - https://scrimba.com/g/glearnreact
+- Wes Bos - https://wesbos.com/
+- Level Up Tutorials - https://www.leveluptutorials.com/
+- Tyler McGinnis - https://tylermcginnis.com/reactjs-tutorial-a-comprehensive-guide-to-building-apps-with-react/
+- Syntax Podcast - https://syntax.fm/
+
+---
+
 ---
